syntax = "proto3";

package review;

message CommentId{
    string id = 1;
}

message Comment {
    string id = 1;
    string user_id = 2;
    string staff_id = 3;
    repeated string comment = 6;
    repeated ReplyComments reply_comment = 7;
    string created_at = 8;
    string updated_at = 9;
    string deleted_at = 10;
}

message ReplyComments {
    string id = 1;
    string user_id = 2;
    string staff_id = 3;
    repeated string comment = 6;
    string created_at = 8;
    string updated_at = 9;
    string deleted_at = 10;
}

message DeleteUserCommentsRequest {
    string user_id = 1; 
    string id = 2;
}

message CountCommentsResponse {
    int64 count = 1;
    repeated string error = 2;
}

message ListCommentsRequest {
    string object_id = 1;
    string object_type = 2;
    int64 limit = 3;
    int64 page = 4;
}

message ListCommentsResponse {
    repeated Comment results = 1;
    int64 count = 2;
}

message DeleteCommentRequest {
    string id = 1;
    string object_id = 2;
    string user_id = 3;
    string object_type = 4;
}
